--- a/src/app/credenciales/registro/dialog/dialog.component.html
+++ b/src/app/credenciales/registro/dialog/dialog.component.html
@@ -1,7 +1,10 @@
 <div class="row">
-  <div class="col-4"></div>
-  <div class="col-4"></div>
-  <div class="col-4" id="btnSalir">
+  <div class="col-2"></div>
+  <div class="col-2"></div>
+  <div class="col-2"></div>
+  <div class="col-2"></div>
+  <div class="col-2"></div>
+  <div class="col-2" id="salir">
     <button type="button" class="btn-close"  (click)="cerrar()"></button>
   </div>
   
