--- a/src/app/credenciales/registro/registro.component.sass
+++ b/src/app/credenciales/registro/registro.component.sass
@@ -1,15 +1,4 @@
 #btnAccion
-    height: 30px
-    width: 30px
-    margin: auto
-    padding-right: 15px
-    
-
-#icono
-    height: 15px
-    width: 15px
-    text-align:left
-
-#btnNuevo
-    border-radius: 80px
-
+    position: absolute
+    text-align: center
+    display: inline-block
